# homework_03_explorer

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION
artifacts/: log.txt
include/: explorer.hpp
sources/: explorer.cpp
tests/: test.cpp
